test_suite/alan-2022-examples/failing/000660_mutation.alan
source W begin boolean *; relax end
